# BlockChain-WebSite

./: .gitignore  README.md  package-lock.json
blockchainn/client/: README.md  index.html  package-lock.json  package.json
frontend/: astro.config.mjs  package-lock.json  package.json
frontend/pages/: _app.tsx  _document.tsx  index.tsx
frontend/styles/: globals.css
objectDetection/: yolo_pretratined.py  yolo_pretratined_nms.py
services/: .smproj  build_auth_service.bat  build_database_service.bat  build_object_detection.bat  build_taueureka.bat  build_taugateway.bat  build_wallet_service.bat  config_all.bat  run_auth_service.bat  run_database_service.bat  run_object_detection.bat  run_redis.bat  run_taueureka.bat  run_taugateway.bat  run_wallet_service.bat  up_dependencies.bat
services/Authentication-Service/: Authentication-Service.sln
services/Database-Service/: Database-Service.sln  Database-Service.smproj
services/ObjectDetection-Service/: Dockerfile  requirements.txt
services/db-service/: .env  Cargo.toml
services/db-service/migrations/2022-10-20-164706_gusers/: down.sql  up.sql
services/db-service/migrations/2022-12-06-185417_qr_table/: down.sql  up.sql
services/db-service/migrations/2022-12-06-190042_transaction_table/: down.sql  up.sql
services/db-service/migrations/2022-12-06-193516_wallet_table/: down.sql  up.sql
services/db-service/migrations/2022-12-06-193820_product_table/: down.sql  up.sql
services/db-service/src/: db.rs  main.rs  schema.rs
services/db-service/src/user/: mod.rs  model.rs  routes.rs
services/qrservices/: app.py
(+197 files in other folders)
