[package]
name = "db-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
# sea-orm = { version = "0.9.3", features = [ "sqlx-postgres", "runtime-async-std-native-tls", "macros" ] }
diesel = { version = "1.4.8", features = ["postgres","chrono"] }
dotenvy = "0.15"
# postgres = "0.19"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_with = "1.9.1"
reqwest = {version = "0.11.13",features = ["blocking","json"]}
chrono="0.4.23"
json="0.12.4"

# prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.2" }
